# Cotengra

./: .gitattributes  .gitignore  Cargo.toml  README.md  ResourceDefinition.nb
.github/workflows/: ci.yml
Cotengra/: PacletInfo.wl  ResourceDefinition.nb
Cotengra/Kernel/: Cotengra.wl
Cotengra/LibraryResources/MacOSX-ARM64/: libcotengra.dylib  libcotengrust.dylib
Cotengra/tests/: abort_optimal_test.wl  run_dataset_test.wl
Notebooks/: Cotengra-Dev.nb
scripts/: package_macos.sh
src/: lib.rs  lib_old.rs
